--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 	</script>
 	<div id = "map"></div>
 	<form id = "Form1" onsubmit = "SearchInputFunction(); return false" autocomplete = "off">
+		<h3>2011-2012 Harare Garden Bird Survey</h3>
 		<h3>Choose Some Data to Show:</h3>
 		<select id = "ArbitraryDataList" onchange = "javascript:HideUnhide();">
 			<option title = "Display on the map how often a bird species was seen over the year" value = "Frequency">Show the frequency of a species over the year</option>
