--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-	<title>HGBS2011-2012</title>
+	<title>HGBS</title>
 	<meta charset="utf-8">
 <style>
 	html, body, #map {
@@ -131,21 +131,25 @@
 </head>
 <body onload = "initMap()">
 	<script
-		src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyA6gpzcZk2cZ5Lr0NPJDlDmoohChueFYw8">
+		src = "https://maps.googleapis.com/maps/api/js?key=AIzaSyBrUz5AcMaWJqtfk2f595oqp-lUmvCzC8Y">
 	</script>
 	<div id = "map"></div>
 	<form id = "Form1" onsubmit = "SearchInputFunction(); return false" autocomplete = "off">
-		<h3>2011-2012 Harare Garden Bird Survey</h3>
+		<h3>Harare Garden Bird Survey</h3>
 		<h3>Choose Some Data to Show:</h3>
-		<select id = "ArbitraryDataList" onchange = "javascript:HideUnhide();">
-			<option title = "Display on the map how often a bird species was seen over the year" value = "Frequency">Show the frequency of a species over the year</option>
-			<option title = "Show the total number of species seen at each location over the year" value = "Total Number of Species Observed">Total number of species observed over the year</option>
-			<option title = "Show the average number of bird species seen each week" value = "Average Number of Species per Week Observed">Average Number of Species per Week Over the Year</option>
+		<select id = "ArbitraryDataList" <!--onchange = "javascript:HideUnhide();"-->>
+			<option title = "Display the total number of species seen at each location over the entire year of the survey." value = "Total Species Seen">Total number of species seen over the year</option>
+			<option title = "Display the average weekly species count." value = "Average Weekly Total">Average number of species seen each week</option>
+			<!--<option title = "Show the average number of bird species seen each week" value = "Average Number of Species per Week Observed">Average Number of Species per Week Over the Year</option>
 			<option title = "Display how many weeks of data were submitted from each location" value = "Total Number of Weeks Observed">Total number of weeks submitted</option>
 			<option title = "Cycle through a range of weeks, showing how many species were seen each week" value = "Number of Species Seen Week ">Total number of species seen in range of weeks</option>
-			<option title = "Cycle through a range of weeks, showing where a particular bird species was seen each week" value = "By Week">Show weekly observation data for a species</option>
+			<option title = "Cycle through a range of weeks, showing where a particular bird species was seen each week" value = "By Week">Show weekly observation data for a species</option>-->
 		</select>
-		<select title = "Birds are listed according to Roberts VII number" id = "BirdNameSearch">
+		<select id = "YearSelect">
+			<option title = "Show 2011-2012 data" value = "Year11">Show 2011-2012 data</option>
+			<option title = "Show 2016-2017 data" value = "Year16">Show 2016-2017 data</option>
+		</select>
+		<!--<select title = "Birds are listed according to Roberts VII number" id = "BirdNameSearch">
 		</select>
 		<label id = "searchBoxLabel">Use this to search through the list if needed:<input type = "search" id = "searchBox"/></label>
 		<label id = "WeekLabel" style = "display: none;">From Week <select title = "Hover the cursor over a week number in the dropdown list to see the dates" id = "StartWeek" onchange = "javascript:SetMinMax();">
@@ -258,25 +262,27 @@
 		<label id = "SpeedOfWeekChangeLabel" style = "display: none;">Time Interval Between Change of Week:<br />
 		0.5s<input type = "range" title = "Adjust the slider to choose a speed for the animation: minimum interval between changing the week shown is 0.5s and maximum is 5s" id = "SpeedOfWeekChange" value = 4000 min = 500 max = 5000 />5s</label>
 		<input type = "button" title = "Click to stop the animation" id = "PauseButton" onclick = "PauseCount()" value = "Stop" style = "display: none;"/>
-		<input type = "button" title = "Click to continue the animation from where it was" id = "ResumeButton" onclick = "ResumeCount()" value = "Resume" style = "display: none;"/>
-		<input type = "submit" title = "Click here to show the chosen data on the map. A map legend will be brought up on the right with and more information of what's been shown on the map" id = "SubmitButton" value = "Submit New Query"/>
+		<input type = "button" title = "Click to continue the animation from where it was" id = "ResumeButton" onclick = "ResumeCount()" value = "Resume" style = "display: none;"/>-->
+		<input type = "submit" title = "Click here to show the chosen data on the map." id = "SubmitButton" value = "Submit New Query"/>
 	</form>
 	<script>
 		var map;
 		var BirdName;
 		var a;
-		var timeInterval;
+		/*var timeInterval;
 		var WeekStart;
 		var WeekEnd;
 		var WhichPause;
 		
 		var FrequencyLayer = new google.maps.Data();
 		var WeeklyLayer = new google.maps.Data();
-		var ArbitraryLayer = new google.maps.Data();
+		var ArbitraryLayer = new google.maps.Data();*/
+		var Layer2011 = new google.maps.Data();
+		var Layer2016 = new google.maps.Data();
 		
 		var script = document.createElement('script');
 		var script1 = document.createElement('script');
-		var script2 = document.createElement('script');
+		//var script2 = document.createElement('script');
 		
 		var controlRecentUI = document.createElement('div');
 		var controlRecentText = document.createElement('div');
@@ -298,12 +304,16 @@
 		var when = "keyup"; //Can change this to keydown, keypress or change
 		
 		function initMap() {//Load map
-			script.src = 'FrequencyData.geojson'; //Get data from .geojson file, change to location of file as required
+			/*script.src = 'FrequencyData.geojson'; //Get data from .geojson file, change to location of file as required
 			script1.src = 'WeeklyData.geojson';
 			script2.src = 'ArbitraryData.geojson';
 			document.getElementsByTagName('head')[0].appendChild(script);
 			document.getElementsByTagName('head')[0].appendChild(script1);
-			document.getElementsByTagName('head')[0].appendChild(script2);
+			document.getElementsByTagName('head')[0].appendChild(script2);*/
+			script.src = '2011Data.geojson';
+			script1.src = '2016Data.geojson';
+			document.getElementsByTagName('head')[0].appendChild(script);
+			document.getElementsByTagName('head')[0].appendChild(script1);
 			
 			MinMax.className = 'MinMaxUI';
 			MinMaxText.innerHTML = '<b>-</b>';
@@ -326,15 +336,15 @@
 			legendUI.appendChild(legendText6);
 			
 			map = new google.maps.Map(document.getElementById('map'), {
-				center: {lat:-17.773, lng: 31.06},//31067
-				zoom: 12,
+				center: {lat:-17.7786, lng: 31.01},//31067 NEW: -17.778598, 31.01
+				zoom: 13,
 				mapTypeControlOptions: {
 					style: google.maps.MapTypeControlStyle.DROPDOWN_MENU
 				}
 			});
 
 			script.onload = function() {
-				var a = FrequencyLayer.getFeatureById('Chalkmead');
+				//a = Layer2011.getFeatureById('Chalkmead');
 				controlRecentUI.className = 'UI';
 				Right.className = 'UIUIUI';
 				Right.appendChild(MinMax);
@@ -343,7 +353,7 @@
 				controlRecentUI.appendChild(legendUI);
 				controlRecentUI.appendChild(infoContent);
 				controlRecentUI.appendChild(moreInfo);
-				var i = 0;
+				/*var i = 0;
 				a.forEachProperty(function(value, property){//Create dropdown list
 					var option = document.createElement('option');
 					option.value = property;
@@ -353,24 +363,24 @@
 						searchBox = document.querySelector("#searchBox");
 						BirdNameSearch = document.querySelector("#BirdNameSearch");
 					}
-				});
+				});*/
 				controlFormUI.className = 'UIUI';
 				controlFormUI.appendChild(document.getElementById("Form1"));
 				map.controls[google.maps.ControlPosition.LEFT].push(controlFormUI);
 			}
 		}	
 		function data_callback0(results){//Add the geojson to the data objects
-			FrequencyLayer.addGeoJson(results);
+			Layer2011.addGeoJson(results);
 		}
 		function data_callback1(results){
-			WeeklyLayer.addGeoJson(results);
+			Layer2016.addGeoJson(results);
 		}
-		function data_callback2(results){
+		/*function data_callback2(results){
 			ArbitraryLayer.addGeoJson(results);
-		}
-		function getCircle(Freq, Scale, featureID){//Style the data
+		}*/
+		function getCircle(Freq, Scale, featureID, circleColour){//Style the data
 			var circle
-			if ((ArbitraryLayer.getFeatureById(featureID)).getProperty("Total Number of Weeks Observed") <= 10){
+			/*if ((ArbitraryLayer.getFeatureById(featureID)).getProperty("Total Number of Weeks Observed") <= 10){
 				if (Freq/Scale < 5 && Freq > 0){
 					circle = {
 						url:"MarkerInsigRed.svg",
@@ -408,16 +418,16 @@
 						url:"MarkerInsigGreen.svg",
 						anchor: new google.maps.Point(0, 12.37)
 					}
-				} else {
+				} else {*/
 					circle = {
 						path: google.maps.SymbolPath.CIRCLE,
 						fillOpacity: 0.8,
-						fillColor: 'green',
+						fillColor: circleColour,
 						scale: (Freq/Scale),
 						strokeColor: 'black',
 						strokeWeight: 1,
 					};
-				}
+				/*}
 			} else if ((30 < (ArbitraryLayer.getFeatureById(featureID)).getProperty("Total Number of Weeks Observed")) && ((ArbitraryLayer.getFeatureById(featureID)).getProperty("Total Number of Weeks Observed") < 41)){
 				if (Freq/Scale < 5 && Freq > 0){
 					circle = {
@@ -450,10 +460,10 @@
 						strokeWeight: 1,
 					};
 				}
-			};
+			};*/
 			return circle;
 		}
-		function WeeklyStyleFunction(Freq, featureID){//Style the data
+		/*function WeeklyStyleFunction(Freq, featureID){//Style the data
 			var markerWeekly;
 			if (Freq == 0){
 				if ((ArbitraryLayer.getFeatureById(featureID)).getProperty("Number of Species Seen Week " + WeekStart) > 0){
@@ -489,14 +499,14 @@
 				}
 			};
 			return markerWeekly;
-		}
+		}*/
 		function SearchInputFunction(){//Do things on submit
-			document.getElementById('ResumeButton').setAttribute('style', "display: none;");
-			BirdName = document.getElementById("BirdNameSearch").value;
+			//document.getElementById('ResumeButton').setAttribute('style', "display: none;");
+			//BirdName = document.getElementById("BirdNameSearch").value;
 			a = document.getElementById('ArbitraryDataList').value;
 			map.controls[google.maps.ControlPosition.TOP_RIGHT].clear();
-			map.controls[google.maps.ControlPosition.TOP_RIGHT].push(Right);
-			if (a == "Frequency"){
+			//map.controls[google.maps.ControlPosition.TOP_RIGHT].push(Right);
+			/*if (a == "Frequency"){
 				FrequencyLayer.setStyle(function(feature){
 					var Freq1 = feature.getProperty(document.getElementById("BirdNameSearch").value);
 					return {
@@ -628,47 +638,73 @@
 					document.getElementById('WeekLabel1').setAttribute('style', "display: inline-block;");
 					document.getElementById('SpeedOfWeekChangeLabel').setAttribute('style', "display: inline-block;");
 				}
-			} else if (a == "Average Number of Species per Week Observed"){
-				ArbitraryLayer.setStyle(function(feature){
+			} else */
+			if (a == "Total Species Seen"){
+				Layer2011.setStyle(function(feature){
 					var Freq1 = feature.getProperty(a);
 					return {
-						icon: getCircle(Freq1, 3, feature.getId()),
-						title: Freq1 + " species on average were seen here each week"
+						icon: getCircle(Freq1, 3, feature.getId(), 'red'),
+						title: Freq1 + " was the total species count over the year"
+					}
+				});				
+				Layer2016.setStyle(function(feature){
+					var Freq1 = feature.getProperty(a);
+					return {
+						icon: getCircle(Freq1, 3, feature.getId(), 'blue'),
+						title: Freq1 + " was the total species count over the year"
 					}
 				});
-				infoContent.innerHTML = "";
+				/*infoContent.innerHTML = "";
 				moreInfo.innerHTML = "<h3>Further Information</h3><a href = http://sabap2.adu.org.za target = '_blank'>SABAP2 site</a><a href = http://www.birdlifezimbabwe.org target = '_blank' >Birdlife Zimbabwe</a><a href = https://www.facebook.com/BirdLifeZimbabwe target = '_blank' >BirdLife Zimbabwe Facebook</a><a href = mailto:2016hgbs@gmail.com?Subject=HGBSMap%20Feedback > Send Feedback</a>";
 				legendText6.innerHTML = "<img src = MarkerCirclePurple.svg width = 66.73 /> Total number of weeks observed was 41 or more";
 				legendText5.innerHTML = "<img src = MarkerCircleBlue.svg width = 66.73 /> Total number of weeks observed was between 31 and 40";
 				legendText4.innerHTML = "<img src = MarkerCircleGreen.svg width = 66.73 /> Total number of weeks observed was between 21 and 30";
 				legendText3.innerHTML = "<img src = MarkerCircleYellow.svg width = 66.73 /> Total number of weeks observed was between 11 and 20";
 				legendText2.innerHTML = "<img src = MarkerCircleRed.svg width = 66.73 /> Total number of weeks observed was 10 or fewer";
-				legendText1.innerHTML = "The <b>size</b> of the circle corresponds to the <b>magnitude of the average</b>. The bigger the circle, the higher the average! Hover the cursor over a marker to see the exact value at that location. The <b>colour</b> of the circle shows the <b>number of weeks of data that were submitted</b> from the location:"
-				WeeklyLayer.setMap(null);
-				FrequencyLayer.setMap(null);
-				ArbitraryLayer.setMap(map);
-				controlRecentText.innerHTML = "<h3>Now Showing: " + a + "</h3>";
-			} else if (a == "Total Number of Species Observed"){
-				ArbitraryLayer.setStyle(function(feature){
+				legendText1.innerHTML = "The <b>size</b> of the circle corresponds to the <b>magnitude of the average</b>. The bigger the circle, the higher the average! Hover the cursor over a marker to see the exact value at that location. The <b>colour</b> of the circle shows the <b>number of weeks of data that were submitted</b> from the location:"*/
+				if (document.getElementById('YearSelect').value == 'Year11'){
+				Layer2016.setMap(null);
+				Layer2011.setMap(map);
+				} else {
+					Layer2011.setMap(null);
+					Layer2016.setMap(map);
+				};
+				//ArbitraryLayer.setMap(map);
+				//controlRecentText.innerHTML = "<h3>Now Showing: " + a + "</h3>";
+			} else if (a == "Average Weekly Total"){
+				Layer2011.setStyle(function(feature){
 					var Freq1 = feature.getProperty(a);
 					return {
-						icon: getCircle(Freq1, 5, feature.getId()),
-						title: Freq1 + " species in total were observed here"
+						icon: getCircle(Freq1, 3, feature.getId(), 'red'),
+						title: Freq1 + " was the average weekly species count at this location"
 					}
 				});
-				infoContent.innerHTML = "";
+				Layer2016.setStyle(function(feature){
+					var Freq1 = feature.getProperty(a);
+					return {
+						icon: getCircle(Freq1, 3, feature.getId(), 'blue'),
+						title: Freq1 + " was the average weekly species count at this location"
+					}
+				});
+				/*infoContent.innerHTML = "";
 				moreInfo.innerHTML = "<h3>Further Information</h3><a href = http://sabap2.adu.org.za target = '_blank'>SABAP2 site</a><a href = http://www.birdlifezimbabwe.org target = '_blank' >Birdlife Zimbabwe</a><a href = https://www.facebook.com/BirdLifeZimbabwe target = '_blank' >BirdLife Zimbabwe Facebook</a><a href = mailto:2016hgbs@gmail.com?Subject=HGBSMap%20Feedback > Send Feedback</a>";
 				legendText6.innerHTML = "<img src = MarkerCirclePurple.svg width = 66.73 /> Total number of weeks observed was 41 or more";
 				legendText5.innerHTML = "<img src = MarkerCircleBlue.svg width = 66.73 /> Total number of weeks observed was between 31 and 40";
 				legendText4.innerHTML = "<img src = MarkerCircleGreen.svg width = 66.73 /> Total number of weeks observed was between 21 and 30";
 				legendText3.innerHTML = "<img src = MarkerCircleYellow.svg width = 66.73 /> Total number of weeks observed was between 11 and 20";
 				legendText2.innerHTML = "<img src = MarkerCircleRed.svg width = 66.73 /> Total number of weeks observed was 10 or fewer";
-				legendText1.innerHTML = "The <b>size</b> of the circle is linked to the <b>total number of species seen</b>. The bigger the circle, the greater the number of species seen! Hover the cursor over a marker to see the exact value at that location. The <b>colour</b> of the circle shows the <b>number of weeks of data that were submitted</b> from the location:"
-				WeeklyLayer.setMap(null);
-				FrequencyLayer.setMap(null);
-				ArbitraryLayer.setMap(map);
-				controlRecentText.innerHTML = "<h3>Now Showing: " + a + "</h3>";
-			} else {
+				legendText1.innerHTML = "The <b>size</b> of the circle is linked to the <b>total number of species seen</b>. The bigger the circle, the greater the number of species seen! Hover the cursor over a marker to see the exact value at that location. The <b>colour</b> of the circle shows the <b>number of weeks of data that were submitted</b> from the location:"*/
+				if (document.getElementById('YearSelect').value == 'Year11'){
+					Layer2016.setMap(null);
+					Layer2011.setMap(map);
+				} else {
+					Layer2011.setMap(null);
+					Layer2016.setMap(map);
+				};
+				//ArbitraryLayer.setMap(map);
+				//controlRecentText.innerHTML = "<h3>Now Showing: " + a + "</h3>";
+			} 
+			/*else {
 				ArbitraryLayer.setStyle(function(feature){
 					var Freq1 = feature.getProperty(a);
 					return {
@@ -688,9 +724,9 @@
 				FrequencyLayer.setMap(null);
 				ArbitraryLayer.setMap(map);
 				controlRecentText.innerHTML = "<h3>Now Showing: " + a + "</h3>";
-			};
+			}*/;
 		}
-		function PauseCount(){//Pause timeout
+		/*function PauseCount(){//Pause timeout
 			document.getElementById('SubmitButton').setAttribute('style', "display: inline-block;");
 			document.getElementById('PauseButton').setAttribute('style', "display: none;");
 			document.getElementById('ResumeButton').setAttribute('style', "display: inline-block;");
@@ -785,8 +821,8 @@
 					document.getElementById('SpeedOfWeekChangeLabel').setAttribute('style', "display: inline-block;");
 				}
 			}
-		}
-		function HideUnhide(){//Hide and show elements depending on selection
+		}*/
+		/*function HideUnhide(){//Hide and show elements depending on selection
 			if (document.getElementById('ArbitraryDataList').value == "Frequency"){
 				document.getElementById('BirdNameSearch').setAttribute('style', "display: inline-block;");
 				document.getElementById('searchBoxLabel').setAttribute('style', "display: inline-block;");
@@ -812,7 +848,7 @@
 				document.getElementById('WeekLabel1').setAttribute('style', "display: none;");
 				document.getElementById('SpeedOfWeekChangeLabel').setAttribute('style', "display: none;");
 			};
-		}
+		}*/
 		function MinMaxOverlay(){
 			if (MinMaxText.innerHTML == '<b>-</b>'){
 				MinMaxText.innerHTML = "<b>+</b>";
@@ -826,7 +862,7 @@
 				Right.style.height = "100%";
 			}
 		}
-		function SetMinMax(){//Adjust week limits
+		/*function SetMinMax(){//Adjust week limits
 			if(document.getElementById('StartWeek').selectedIndex > document.getElementById('EndWeek').selectedIndex){
 				document.getElementById('EndWeek').value = document.getElementById('StartWeek').value;
 			}
@@ -872,7 +908,7 @@
 				}
 				searchBox.selectedIndex = 0;
 			}
-		});
+		});*/
 
 
 	</script>
